--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.5.3",
+    "datatables.net-bs4": "^1.10.22",
+    "datatables.net-dt": "^1.10.22",
+    "datatables.net-fixedheader-bs4": "^3.1.7",
+    "datatables.net-scroller-bs4": "^2.0.3",
     "flatpickr": "^4.6.6",
     "jquery": "^3.5.1",
     "mapbox-gl": "^1.13.0",
