--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.5.3",
+    "datatables.net-bs4": "^1.10.22",
     "flatpickr": "^4.6.6",
     "jquery": "^3.5.1",
     "mapbox-gl": "^1.13.0",
