--- a/config/meta.yml
+++ b/config/meta.yml
@@ -2,4 +2,4 @@ meta_product_name: "Recruitup"
 meta_title: "Recruitup - Recruiting made efficient!"
 meta_description: "Allows you to create your recruiting schedule with ease."
 meta_image: "logo.png" # should exist in `app/assets/images/`
-twitter_account: "@product_twitter_account"   # required for Twitter Cards
+twitter_account: "@recruit_up"   # required for Twitter Cards
